# aubio-rs

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  README.md
.github/workflows/: ci.yml
aubio-lib/: Cargo.toml  README.md  build.rs
aubio-lib/src/: lib.rs
aubio-rs/: Cargo.toml  README.md
aubio-rs/examples/: notes.rs
aubio-rs/src/: fft.rs  filterbank.rs  lib.rs  log.rs  mfcc.rs  notes.rs  onset.rs  pitch.rs  pvoc.rs  resampler.rs  specdesc.rs  tempo.rs  types.rs  utils.rs  vec.rs  winfunc.rs
aubio-sys/: Cargo.toml  Makefile  README.md  build.rs
aubio-sys/src/: bindings_wasm32.rs  bindings_x32.rs  bindings_x64.rs  bindings_x86_64.rs  lib.rs
aubio-sys/src/bindings/: arm-linux-gnu_double.rs  mips-linux-gnu_single.rs  powerpc-linux-gnu_double.rs  x86-windows-gnu_single.rs  x86-windows-msvc_single.rs  x86_64-macos-_double.rs  x86_64-windows-gnu_double.rs  x86_64-windows-msvc_single.rs
examples/: notes.rs
nix/: desktop-dist.nix  desktop-self.nix
scripts/: gen_bindings.sh  pre_compile.sh
src/: filterbank.rs  lib.rs  log.rs  mfcc.rs  notes.rs  onset.rs  pitch.rs  specdesc.rs  types.rs  utils.rs
sys/: Cargo.toml  README.md
sys/src/: lib.rs
sys/src/bindings/: mips64-linux-gnu_single.rs  x86-windows-gnu_double.rs  x86-windows-msvc_double.rs  x86_64-windows-gnu_single.rs  x86_64-windows-msvc_double.rs
