[package]
name = "aubio-lib"
version = "0.1.2"
description = "Bundled aubio C library."
categories = ["external-ffi-bindings", "multimedia::audio"]
keywords = ["aubio", "audio", "processing", "recognition", "ffi"]
authors = ["K. <kayo@illumium.org>"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/katyo/aubio-rs"
edition = "2018"

[badges]


[build-dependencies.fetch_unroll]
version = "^0.2"

[features]
shared = []
rustdoc = []

with-fftw3f = []
with-fftw3 = []
with-wav = []
with-jack = []
with-sndfile = []
with-avcodec = []
with-samplerate = []

[package.metadata.docs.rs]
features = ["rustdoc"]
