[package]
name = "aubio-lib"
version = "0.1.2"
description = "Bundled aubio C library."
categories = ["external-ffi-bindings", "multimedia::audio"]
keywords = ["aubio", "audio", "processing", "recognition", "ffi"]
authors = ["K. <kayo@illumium.org>"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/katyo/aubio-rs"
edition = "2018"

[badges]


[build-dependencies.fetch_unroll]
version = "^0.2"

[build-dependencies.cmake]
version = "^0.1"
optional = true

[features]
shared = []
rustdoc = []

with-double = []
with-fftw3 = ["cmake"]
nolink-fftw3 = []
shared-fftw3 = []

[package.metadata.docs.rs]
features = ["rustdoc"]
