[package]
name = "aubio-rs"
version = "0.1.3"
description = "Safe bindings for aubio library to label music and sounds."
categories = ["external-ffi-bindings", "multimedia::audio"]
keywords = ["aubio", "audio", "processing", "recognition", "ffi"]
authors = ["K. <kayo@illumium.org>"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/katyo/aubio-rs"
edition = "2018"

[badges]


[dependencies.aubio-sys]
version = "0.1.3"
path = "../aubio-sys"

[dependencies.log]
version = "^0.4"
optional = true

[dev-dependencies.hound]
version = "^3"

[dev-dependencies.aubio-lib]
version = "0.1.3"
path = "../aubio-lib"

[features]
generate-bindings = ["aubio-sys/generate-bindings"]
rustdoc = ["aubio-sys/rustdoc"]
check-size = []

[package.metadata.docs.rs]
features = ["rustdoc"]
