[package]
name = "aubio-sys"
version = "0.1.3"
description = "Unsafe bindings for aubio library to label music and sounds."
categories = ["external-ffi-bindings", "multimedia::audio"]
keywords = ["aubio", "audio", "processing", "recognition", "ffi"]
authors = ["K. <kayo@illumium.org>"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/katyo/aubio-rs"
edition = "2018"

[badges]

[build-dependencies.pkg-config]
version = "^0.3"

[build-dependencies.fetch_unroll]
version = "^0.2"
optional = true

[build-dependencies.bindgen]
version = "^0.53"
optional = true

[features]
generate-bindings = ["bindgen", "fetch_unroll"]
rustdoc = []
build = []

[package.metadata.docs.rs]
features = ["rustdoc"]
